# meta-manager

./: .editorconfig  .gitignore  .prettierrc.json  eslint.config.ts  package-lock.json  package.json  vite.config.ts
src/: main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  logger.rs  main.rs
src-tauri/src-w/core/: Cargo.toml
src-tauri/src-w/core/src/: lib.rs
src-tauri/src-w/core/src/data/: library.rs  metadata.rs  mod.rs  unit.rs
src-tauri/src-w/core/src/foundation/: config.rs
src-tauri/src-w/core/src/util/: file.rs  flate.rs  mod.rs
src-tauri/src/command/: bridge.rs  mod.rs
src/assets/: main.sass
src/components/typography/: TyParagraph.vue  TySubtitle.vue  TyTitle.vue
src/layout/: AppLayout.vue  ApplicationLayout.vue  PageLayout.vue
src/layout/partial/: AppLayoutSide.vue
src/lib/: api.ts  bridge.ts  command.ts  util.ts
src/pages/base/: ConfigPage.vue  HomePage.vue
src/pages/manage/dashboard/: index.vue  script.ts
src/pages/manage/dashboard/comp/: DetailDial.vue  SubmitDial.vue
src/router/: index.ts  records.ts
src/stores/: library.ts
