[workspace]
members = ["src-w/*"]

[workspace.package]
version = "1.0.0"
authors = ["Rhynia <rhynia_v@outlook.com>"]
license = "GPL-3"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.15"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

[package]
name = "meta-app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "meta_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
m-core = { path = "src-w/core" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri.workspace = true
tauri-plugin-opener.workspace = true
