[workspace]
members = ["src-w/*"]

[workspace.package]
version = "1.0.0"
authors = ["Rhynia <rhynia_v@outlook.com>"]
license = "GPL-3"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
config = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bson = { version = "2", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
derive_builder = "0.20"
uuid = { version = "1", features = ["v4"] }
zip = "2"
sevenz-rust2 = { version = "0.13", features = ["aes256"] }
redb = "2"

[package]
name = "meta-app"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "meta_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
m-core = { path = "src-w/core" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
