[package]
name = "m-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
config.workspace = true
walkdir.workspace = true
chrono.workspace = true
derive_builder.workspace = true
uuid.workspace = true
zip-extract.workspace = true
sevenz-rust2.workspace = true
