[package]
name = "m-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
bson.workspace = true
config.workspace = true
walkdir.workspace = true
chrono.workspace = true
derive_builder.workspace = true
uuid.workspace = true
zip.workspace = true
sevenz-rust2.workspace = true
unrar.workspace = true
redb.workspace = true
